# nemo-rl-lab

./: .gitignore  README.md  lab  lab.cmd  pyproject.toml
.github/workflows/: ci.yml
cluster/: README.md  submit.env.example  submit.env.h100.example
cluster/b300/: overrides.conf
cluster/gb10-spark/: env.sh  hosts.example  overrides.conf  profile.yaml  start_ray_head.sh  start_ray_worker.sh  submit.env.example
cluster/h100/: env.sh  hosts.example  overrides.conf  start_ray_head.sh  submit.env.example
cluster/h200/: profile.yaml
common/: README.md
common/algorithms/: maxrl.py
common/callbacks/: swanlab_logger.py
common/data/: README.md  prepare_alpaca.py  prepare_gsm8k.py  prepare_qa_rl.py
common/environments/: README.md  __init__.py  example_tool_env.py  qa_docs_agent_env.py  qa_env.py  qa_kb_agent_env.py
common/observability/: __init__.py  env_probe.py  hardware_monitor.py  hw_probe.py  ingest_client.py  job_nodes.py  logger.py  patch.py  sampling.py  session.py  terminal_capture.py  terminal_proxy.py  util.py  validation_ctx.py  validation_extract.py
common/rewards/: README.md  __init__.py  agent_reward.py  math_reward.py  qa_judge_reward.py  qa_reward.py  synonyms.json
configs/: README.md
configs/agent/: agent-grpo.example.yaml  overrides.example.conf
configs/base/: README.md  grpo_lora.yaml  grpo_math_1B.yaml  grpo_megatron.yaml  grpo_noncolocated.yaml  grpo_sliding_puzzle.yaml  sft.yaml
configs/grpo/: grpo.example.yaml  overrides.example.conf
configs/models/: README.md  qwen3.5-4b.yaml  qwen3.5-9b.yaml
configs/sft/: overrides.example.conf  sft.example.yaml
datasets/: README.md
datasets/gsm8k/: train.jsonl  val.jsonl
design-system/nemo-rl-lab-console/: MASTER.md
docs/: naming-convention.md  remote-submit.md  setup-dgx-spark-gb10.md  setup-h200.md  swanlab.md
docs/superpowers/specs/: 2026-06-23-web-console-design.md
env/: README.md  requirements.txt
experiments/: README.md
experiments/agent-grpo_qwen3.5-9b_calc-tool_v1/: README.md  config.yaml  run.py
experiments/agent-grpo_qwen3.5-9b_multitool_v1/: README.md  config.yaml  run.py  run.sh
experiments/agent-grpo_qwen3.5-9b_sliding-puzzle_v1/: README.md  config.yaml  run.sh
experiments/grpo_qwen3.5-4b_gsm8k_v1/: README.md  config.yaml  run.sh
experiments/grpo_qwen3.5-9b_gsm8k_v1/: README.md  config.yaml  run.sh
experiments/grpo_qwen3.5-9b_qa-rl-agent_v1/: README.md  cluster  config.yaml  run.py  run.sh
experiments/grpo_qwen3.5-9b_qa-rl-agent_v2/: README.md  config.yaml  run.py
experiments/grpo_qwen3.5-9b_qa-rl-agent_v3/: config.yaml
experiments/grpo_qwen3.5-9b_qa-rl_v1/: README.md  config.yaml  run.py  run.sh
experiments/maxrl_qwen3.5-9b_qa-rl-agent_v2/: README.md  config.yaml  run.sh
experiments/sft_qwen3.5-4b_alpaca_v1/: README.md  config.yaml  run.sh
nemo_rl_lab/: __init__.py  cli.py  cli_login.py  cli_ui.py  client_device.py  config_resolve.py  new_experiment.py  shell_completion.py  sync_base.py
nemo_rl_lab/web/: __init__.py  app.py  auth.py  config.py  frontend_build.py  server.py
nemo_rl_lab/web/services/: cluster.py  experiments.py  ledger.py  ray_source.py
projects/: README.md
scripts/: README.md  _run_experiment.sh  job_samples.py  nemolab_boot.py  new_experiment.sh  post_train.sh  prefetch_hf_model.sh  ray_jobs.py  standardize_question_banks.py  submit_job.sh  sync_base_configs.sh  web_dashboard.py  web_log_parse.py
templates/: agent-run.py.tmpl
templates/experiment-template/: README.md  config.yaml  overrides.conf  run.sh
templates/experiment-template/configs/: train.yaml
tests/: test_cli.py  test_cli_login.py  test_cli_ui.py  test_config_resolve.py  test_hardware_sampling.py  test_job_nodes.py  test_new_experiment.py  test_observability.py  test_post_train.py  test_qa_reward.py  test_shell_completion.py  test_sync_base.py  test_validation_ingest.py
web/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: Layout.tsx  LineChart.tsx
web/src/context/: AuthContext.tsx  ThemeContext.tsx
(+9 files in other folders)
