[project]
name = "nemo-rl-lab"
version = "0.1.0"
description = "本机开发期工具环境：统一 CLI（lab）与数据预处理。重型训练依赖（NeMo-RL / vLLM / Ray / CUDA）走集群官方容器，不在此管理。"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",    # 统一 CLI 入口 lab
    "datasets>=2.18", # 数据预处理 common/data/prepare_*.py
]

[project.optional-dependencies]
# 从本机提交作业到 Ray 集群（lab submit）所需的 Ray CLI（job submission 客户端）。
# 仅是「客户端」，不含 GPU/训练栈；版本对齐 NeMo-RL 0.6.0 的 ray[default]==2.54.0，
# 避免与集群 Ray 协议不兼容。安装：uv sync --extra submit
submit = ["ray[default]==2.54.0"]
# 本地训练面板 lab web 的 HTTP 服务（FastAPI + uvicorn）。取数仍走 submit extra 的 ray，
# 故 lab web 同时启用 submit + web 两个 extra。安装：uv sync --extra submit --extra web
web = ["fastapi>=0.110", "uvicorn>=0.29", "pyyaml>=6"]

[project.scripts]
# 安装后提供 `lab` 命令；`uv run lab ...` 直接可用，仓库根的 ./lab 是它的薄 shim。
lab = "nemo_rl_lab.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# 只打包 CLI 包；common/ configs/ 等是运行期按路径访问的仓库数据，靠 editable 安装就地访问。
packages = ["nemo_rl_lab"]
